--- a/@danimartinwife/250810/새로운게임.md
+++ b/@danimartinwife/250810/새로운게임.md
@@ -115,13 +115,14 @@ for turn in 1..1000:
 return -1 // 1000턴 안에 안 끝나면
 ```
 
-### 🔑 핵심 접근법
+### 핵심 접근법
 
 | 핵심 접근법 항목 | 세부 내용 |
 |---|---|
 | **자료 구조 설계** | - **보드 상태 저장**: `board[r][c]`에 해당 칸에 쌓여 있는 말들의 번호를 `스택(리스트)` 형태로 저장 (예: `말 번호[]`).<br/>- **말 상태 저장**: 각 말의 `현재 위치(r, c)`와 `방향(d)` 등을 별도의 배열(예: `pieces[]`)에 저장하여 빠르게 접근 가능하도록 설계. |
 | **시뮬레이션 순서** | - **턴 반복**: 최대 1000턴까지 게임 진행을 반복.<br/>- **말 이동 순서**: 매 턴마다 `1번 말부터 K번 말까지` 순서대로 이동을 시도.<br/>- **스택/상태 업데이트**: 문제 규칙에 맞춰 말들의 스택 이동 및 위치/방향 상태 업데이트를 정확히 수행.<br/>- **종료 조건 검사**: 말 이동 직후! 해당 칸의 스택 높이(말 개수)가 `4개 이상` 되는지 바로 검사하여 종료 조건 확인. |
 | **규칙 변환 (칸 색깔별)** | - **흰색 (0)**: 이동하려는 말부터 그 위 스택 전체를 `원래 순서 그대로` 새로운 칸의 맨 위에 쌓음.<br/>- **빨간색 (1)**: 이동하려는 말부터 그 위 스택 전체를 `순서가 뒤집혀서` 새로운 칸의 맨 위에 쌓음. ⚡(이거 중요!)<br/>- **파란색 (2) or 범위 밖**: <br/>&nbsp;&nbsp;1. 말의 `방향을 반대로` 변경.<br/>&nbsp;&nbsp;2. 변경된 방향으로 `이동할 위치를 재계산`.<br/>&nbsp;&nbsp;3. `재계산된 위치가 여전히 범위 밖이거나 파란색`이라면, 해당 말은 **이동하지 않고 제자리에 가만히** 있음.<br/>&nbsp;&nbsp;4. 그렇지 않다면, 재계산된 위치의 칸 색깔 룰에 따라 이동. |
+
 
 
 
